--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@carpasse/node-open-source-project-template",
-  "version": "1.2.0-beta.2",
-  "description": "Repository template for new Open Source projects with NodeJS",
+  "name": "@carpasse/dapi-client",
+  "version": "1.0.0",
+  "description": "Singleton DAPI wrapper library",
   "main": "./dist/cjs/index.js",
   "module": "./dist/cjs/index.mjs",
   "type": "commonjs",
@@ -19,6 +19,8 @@
     }
   },
   "keywords": [
+    "dapi",
+    "singleton wrapper",
     "node",
     "typescript",
     "open-source",
@@ -26,7 +28,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/carpasse/node-open-source-project-template.git"
+    "url": "git+https://github.com/carpasse/dapi-client.git"
   },
   "scripts": {
     "test": "node --import tsx --no-warnings --test src/**/*.test.ts",
