feat: dapiClientMixin and createDapiClient factory method

--- a/package.json
+++ b/package.json
@@ -87,5 +87,8 @@
     "ts-node": "^10.9.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "@carpasse/dapi": "^1.0.2-beta.1"
   }
 }
