--- a/package.json
+++ b/package.json
@@ -89,6 +89,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@carpasse/dapi": "v1.1.0-beta.2"
+    "@carpasse/dapi": "v1.1.0"
   }
 }
