--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "test:coverage": "node --import tsx --no-warnings --test --experimental-test-coverage ./src/**/*.test.ts",
     "build": "npm-run-all clean build:*",
     "clean": "rimraf dist",
-    "build:cjs": "tsc -p ./tsconfig.cjs.json && cat >dist/cjs/package.json <<!EOF\n{\n    \"type\": \"commonjs\"\n}\n!EOF",
-    "build:esm": "tsc --project tsconfig.esm.json && cat >dist/esm/package.json <<!EOF\n{\n    \"type\": \"module\"\n}\n!EOF",
+    "build:cjs": "tsc -p ./tsconfig.cjs.json && cat >dist/cjs/package.json <<!EOF\n{\n\"type\":\"commonjs\",\n\"types\":\"./index.d.ts\",\n\"main\":\"./index.js\"\n}\n!EOF",
+    "build:esm": "tsc -p ./tsconfig.esm.json && cat >dist/esm/package.json <<!EOF\n{\n\"type\":\"module\",\n\"types\":\"./index.d.ts\",\n\"main\":\"./index.js\"\n}\n!EOF",
     "lint": "eslint './**/*.{js,jsx,ts,tsx}' && npm run typecheck",
     "lint:fix": "eslint './**/*.{js,jsx,ts,tsx}' --fix",
     "lint:ci": "eslint './**/*.{js,jsx,ts,tsx}' --fix",
@@ -89,6 +89,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "@carpasse/dapi": "v1.1.0"
+    "@carpasse/dapi": "1.1.1-beta.3"
   }
 }
