--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "./dist/esm",
-    "outDir": "./dist/esm"
+    "outDir": "./dist/esm",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "es2022"
   }
 }
